<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviarComentario">Enviar Comentario</string>
    <string name="author">Autor</string>
    <string name="name_author">Manuel Martín</string>
    <string name="date">Fecha</string>
    <string name="today_date">06 de diciembre de 2020</string>
    <string name="curso">Curso</string>
    <string name="nombre_curso">Coursera - Desarrollo de Aplicaciones con Android</string>

</resources>