<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".AcercaActivity"
    android:background="@drawable/gradiente"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/marginLeft"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="@dimen/sizeNombre"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/marginLeft"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_author"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="@dimen/sizeNombre"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/sizeNombre"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/marginLeft"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_date"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="@dimen/sizeNombre"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso"
            android:textSize="@dimen/sizeNombre"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/marginLeft"
            />
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_curso"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="@dimen/sizeNombre"
            />



    </LinearLayout>

</RelativeLayout>