<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/appBar"
        android:padding="@dimen/padding"
        >

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_marginBottom="@dimen/padding"
            android:textSize="@dimen/sizeNombre"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"

            />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/sizeNombre"
            android:layout_marginBottom="@dimen/padding"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:id="@+id/tvMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje"
            android:textSize="@dimen/sizeNombre"
            android:layout_marginBottom="@dimen/padding"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightMensaje"
            android:layout_marginBottom="@dimen/padding"
            android:inputType="textMultiLine"
            />

        <Button
            android:id="@+id/btEnviarComentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/enviarComentario"
            />


    </LinearLayout>

</RelativeLayout>